# nubert

./: .gitignore  README.md  pyproject.toml  tox.ini
analyses/amount-2014-2014/: 06_finetuning.ipynb
analyses/evaluation-2012-2013/: 07_evaluation.ipynb
analyses/evaluation-2013/: 01_dataset_exploration.ipynb  02_amount_and_time.ipynb
analyses/nubank-2013-2014/: 01_dataset_exploration.ipynb  02_amount_and_time.ipynb  03_tokenization.ipynb  04_modeling.ipynb  05_training.ipynb
analyses/nubank-2013-2014/.ipynb_checkpoints/: 01_dataset_exploration-checkpoint.ipynb  02_amount_and_time-checkpoint.ipynb
nubert/: __init__.py
nubert/config/: __init__.py  amount_config.py  default_config.yaml  nubert_config.py
nubert/datasets/: __init__.py  amount_dataset.py  nudataset.py
nubert/utils/: dataset_utils.py
nugpt/: __init__.py  datacollator.py  dataset.py  nugpt.py  tokenizer.py  vocabulary.py
nugpt/datasets/: amount_dataset.py  nudataset.py
nugpt/utils/: __init__.py  dataset_utils.py
scripts/: generate.py  run_evaluation.py  train_amount_predictor.py  train_nubert.py  train_nugpt.py
tests/: test_config.py  test_dataset.py  test_vocabulary.py
