[tool.poetry]
name = "nugpt"
version = "0.1.0"
description = ""
authors = ["Rafael Celente <rafaelmcelente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
