[tool.poetry]
name = "nubert"
version = "0.1.0"
description = ""
authors = ["Rafael Celente <rafaelmcelente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18"
torch = "^2.4.1"
sentencepiece = "^0.2.0"
pandas = "^2.2.3"
transformers = "^4.45.2"
scikit-learn = "^1.5.2"
datasets = "^3.0.1"
accelerate = "^1.0.1"
wandb = "^0.18.3"
seaborn = "^0.13.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
